docs the signup process (both JSDocs and Swagger)
